--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-image: url('fotky/logohlavni.jpg'); /* Obrázek pozadí */
+      background-image: url('https://i.pinimg.com/736x/25/02/16/2502166c4373c85750c8ac5d25cf4c09.jpg'); /* Obrázek pozadí */
       background-size: cover; /* Zajišťuje, že obrázek pokryje celé pozadí */
       background-position: center; /* Vycentrování obrázku na střed */
       background-repeat: no-repeat;
