--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: #ffffff; /* Barevný přechod modro-fialový */
+      background: #ffffff; /* Původní barva pozadí */
       color: #333333;
       text-align: left;
       padding: 20px;
@@ -66,7 +66,7 @@
     .answer {
       display: none;
       font-size: 18px;
-      margin-left: 20px;
+      margin: 0; /* Odstranění odsazení */
     }
 
     .arrow {
@@ -123,7 +123,7 @@
     .language-dropdown {
       position: absolute;
       top: 20px;
-      left: 20px;
+      left: 0;
       color: black;
       cursor: pointer;
       padding: 10px 15px;
@@ -135,6 +135,7 @@
     .language-dropdown:hover .dropdown-content {
       display: block;
     }
+    
   </style>
 </head>
 <body>
@@ -196,7 +197,7 @@
         <h3><span class="emoji">🤔</span> Jak mohu navázat spolupráci s firmou?</h3>
         <span class="arrow">▼</span>
       </div>
-      <p class="answer">Jednoduše se zaregistrujte na platformě a začněte procházet nabídky spolupráce, které jsou k dispozici.</p>
+      <p class="answer" style="margin-left: 0;">Jednoduše se zaregistrujte na platformě a začněte procházet nabídky spolupráce, které jsou k dispozici.</p>
     </div>
   </div>
 
@@ -224,52 +225,59 @@
         document.getElementById("what-is-fluense-text").textContent = "FLUENSE is a platform that connects influencers and companies, allowing them to collaborate and achieve mutual success.";
 
         document.getElementById("our-mission-title").textContent = "🚀 Our Mission";
-        document.getElementById("our-mission-text").textContent = "Our goal is to facilitate collaboration between influencers and companies, creating a space for creativity and innovation.";
+        document.getElementById("our-mission-text").textContent = "Our goal is to facilitate collaboration between influencers and companies and create a space for creativity and innovation.";
 
-        document.getElementById("who-are-we-title").textContent = "💼 Who Are We?";
-        document.getElementById("who-are-we-text").textContent = "FLUENSE is here for all influencers who want to expand their brand and for companies looking for new and effective ways of promotion.";
+        document.getElementById("who-are-we-title").textContent = "💼 Who Are We Here For?";
+        document.getElementById("who-are-we-text").textContent = "FLUENSE is here for all influencers who want to expand their brand and for companies looking for new and effective ways to promote.";
 
         document.getElementById("how-it-works-title").textContent = "💬 How It Works?";
-        document.getElementById("how-it-works-text").textContent = "Simply register, connect your social networks, and start looking for collaboration opportunities with companies looking for influencers like you!";
+        document.getElementById("how-it-works-text").textContent = "Simply register, connect your social media, and start looking for collaboration opportunities with companies that are looking for influencers like you!";
 
-        document.querySelectorAll('.question h3').forEach((question, index) => {
-          if (index === 0) {
-            question.textContent = "🔍 How can I find influencers?";
-          } else if (index === 1) {
-            question.textContent = "📈 What are the benefits of being an influencer?";
-          } else if (index === 2) {
-            question.textContent = "💰 What is the commission from collaborations?";
-          } else if (index === 3) {
-            question.textContent = "🤔 How can I start collaborating with a company?";
-          }
-        });
-      } else if (lang === 'DE') {
+        // Překlady pro otázky
+        document.querySelectorAll('.question h3')[0].textContent = "🔍 How can I find influencers?";
+        document.querySelectorAll('.answer')[0].textContent = "You can find influencers using various tools and platforms that allow you to search by categories and interests.";
+
+        document.querySelectorAll('.question h3')[1].textContent = "📈 What are the benefits as an influencer?";
+        document.querySelectorAll('.answer')[1].textContent = "As an influencer, you can access new opportunities, increase your visibility, and collaborate with various brands.";
+
+        document.querySelectorAll('.question h3')[2].textContent = "💰 What is the commission for collaboration?";
+        document.querySelectorAll('.answer')[2].textContent = "The commission varies depending on the type of collaboration and the specific agreement between influencers and brands.";
+
+        document.querySelectorAll('.question h3')[3].textContent = "🤔 How can I establish collaboration with a company?";
+        document.querySelectorAll('.answer')[3].textContent = "Simply register on the platform and start browsing the collaboration offers available.";
+      }
+
+      // Překlady pro němčinu
+      if (lang === 'DE') {
         document.getElementById("about-title").textContent = "Über uns";
         document.getElementById("what-is-fluense-title").textContent = "🤝 Was ist FLUENSE?";
-        document.getElementById("what-is-fluense-text").textContent = "FLUENSE ist eine Plattform, die Influencer und Unternehmen verbindet und es ihnen ermöglicht, zusammenzuarbeiten und gemeinsamen Erfolg zu erzielen.";
+        document.getElementById("what-is-fluense-text").textContent = "FLUENSE ist eine Plattform, die Influencer und Unternehmen verbindet und ihnen ermöglicht, zusammenzuarbeiten und gegenseitigen Erfolg zu erzielen.";
 
         document.getElementById("our-mission-title").textContent = "🚀 Unsere Mission";
         document.getElementById("our-mission-text").textContent = "Unser Ziel ist es, die Zusammenarbeit zwischen Influencern und Unternehmen zu erleichtern und einen Raum für Kreativität und Innovation zu schaffen.";
 
-        document.getElementById("who-are-we-title").textContent = "💼 Für wen sind wir da?";
-        document.getElementById("who-are-we-text").textContent = "FLUENSE ist für alle Influencer da, die ihre Marke erweitern möchten, und für Unternehmen, die nach neuen und effektiven Möglichkeiten der Werbung suchen.";
+        document.getElementById("who-are-we-title").textContent = "💼 Für wen sind wir hier?";
+        document.getElementById("who-are-we-text").textContent = "FLUENSE ist für alle Influencer da, die ihre Marke erweitern möchten, und für Unternehmen, die nach neuen und effektiven Möglichkeiten zur Werbung suchen.";
 
-        document.getElementById("how-it-works-title").textContent = "💬 Wie funktioniert das?";
-        document.getElementById("how-it-works-text").textContent = "Registrieren Sie sich einfach, verbinden Sie Ihre sozialen Netzwerke und suchen Sie nach Kooperationsmöglichkeiten mit Unternehmen, die nach Influencern wie Ihnen suchen!";
+        document.getElementById("how-it-works-title").textContent = "💬 Wie funktioniert es?";
+        document.getElementById("how-it-works-text").textContent = "Registrieren Sie sich einfach, verbinden Sie Ihre sozialen Medien und beginnen Sie, nach Kooperationsmöglichkeiten mit Unternehmen zu suchen, die Influencer wie Sie suchen!";
 
-        document.querySelectorAll('.question h3').forEach((question, index) => {
-          if (index === 0) {
-            question.textContent = "🔍 Wie kann ich Influencer finden?";
-          } else if (index === 1) {
-            question.textContent = "📈 Welche Vorteile habe ich als Influencer?";
-          } else if (index === 2) {
-            question.textContent = "💰 Wie hoch ist die Provision für die Zusammenarbeit?";
-          } else if (index === 3) {
-            question.textContent = "🤔 Wie kann ich mit einer Firma zusammenarbeiten?";
-          }
-        });
-      } else {
-        // Obnovit do češtiny
+        // Překlady pro otázky
+        document.querySelectorAll('.question h3')[0].textContent = "🔍 Wie finde ich Influencer?";
+        document.querySelectorAll('.answer')[0].textContent = "Sie können Influencer mit verschiedenen Tools und Plattformen finden, die es Ihnen ermöglichen, nach Kategorien und Interessen zu suchen.";
+
+        document.querySelectorAll('.question h3')[1].textContent = "📈 Welche Vorteile habe ich als Influencer?";
+        document.querySelectorAll('.answer')[1].textContent = "Als Influencer können Sie auf neue Möglichkeiten zugreifen, Ihre Sichtbarkeit erhöhen und mit verschiedenen Marken zusammenarbeiten.";
+
+        document.querySelectorAll('.question h3')[2].textContent = "💰 Wie hoch ist die Provision für die Zusammenarbeit?";
+        document.querySelectorAll('.answer')[2].textContent = "Die Provision variiert je nach Art der Zusammenarbeit und der spezifischen Vereinbarung zwischen Influencern und Marken.";
+
+        document.querySelectorAll('.question h3')[3].textContent = "🤔 Wie kann ich eine Zusammenarbeit mit einem Unternehmen aufbauen?";
+        document.querySelectorAll('.answer')[3].textContent = "Registrieren Sie sich einfach auf der Plattform und beginnen Sie, die verfügbaren Kooperationsangebote zu durchsuchen.";
+      }
+
+      // Vraťte se na češtinu
+      if (lang === 'CZ') {
         document.getElementById("about-title").textContent = "O nás";
         document.getElementById("what-is-fluense-title").textContent = "🤝 Co je FLUENSE?";
         document.getElementById("what-is-fluense-text").textContent = "FLUENSE je platforma, která spojuje influencery a firmy, umožňuje jim spolupracovat a dosahovat vzájemného úspěchu.";
@@ -283,17 +291,18 @@
         document.getElementById("how-it-works-title").textContent = "💬 Jak to funguje?";
         document.getElementById("how-it-works-text").textContent = "Jednoduše se zaregistrujte, propojíte své sociální sítě a začnete vyhledávat příležitosti ke spolupráci s firmami, které hledají influencery jako jste vy!";
 
-        document.querySelectorAll('.question h3').forEach((question, index) => {
-          if (index === 0) {
-            question.textContent = "🔍 Jak mohu najít influencery?";
-          } else if (index === 1) {
-            question.textContent = "📈 Jaké výhody mám jako influencer?";
-          } else if (index === 2) {
-            question.textContent = "💰 Jaká je provize z spolupráce?";
-          } else if (index === 3) {
-            question.textContent = "🤔 Jak mohu navázat spolupráci s firmou?";
-          }
-        });
+        // Překlady pro otázky
+        document.querySelectorAll('.question h3')[0].textContent = "🔍 Jak mohu najít influencery?";
+        document.querySelectorAll('.answer')[0].textContent = "Influencery můžete najít pomocí různých nástrojů a platforem, které vám umožní vyhledávat podle kategorií a zájmů.";
+
+        document.querySelectorAll('.question h3')[1].textContent = "📈 Jaké výhody mám jako influencer?";
+        document.querySelectorAll('.answer')[1].textContent = "Jako influencer můžete získat přístup k novým příležitostem, zvýšit svou viditelnost a spolupracovat s různými značkami.";
+
+        document.querySelectorAll('.question h3')[2].textContent = "💰 Jaká je provize z spolupráce?";
+        document.querySelectorAll('.answer')[2].textContent = "Provize se liší podle typu spolupráce a konkrétní dohody mezi influencery a značkami.";
+
+        document.querySelectorAll('.question h3')[3].textContent = "🤔 Jak mohu navázat spolupráci s firmou?";
+        document.querySelectorAll('.answer')[3].textContent = "Jednoduše se zaregistrujte na platformě a začněte procházet nabídky spolupráce, které jsou k dispozici.";
       }
     }
   </script>
